--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>TXT by HTML5 UP</title>
+		<title>Cash 4 Probate</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,7 +19,7 @@
 					<div class="logo container">
 						<div>
 							<h1><a href="index.html" id="logo">TXT</a></h1>
-							<p>A responsive site template by HTML5 UP</p>
+							<p>Don't wait months or years to get paid through probate! Get paid TODAY with Cash4Probate</p>
 						</div>
 					</div>
 				</header>
@@ -54,8 +54,8 @@
 			<!-- Banner -->
 				<section id="banner">
 					<div class="content">
-						<h2>Welcome to TXT by HTML5 UP</h2>
-						<p>A free responsive site template built on HTML5, CSS3, and some other stuff</p>
+						<h2>Welcome to Cash4Probate.com - Why Wait? Get paid today!</h2>
+						<p>Probate can take months or even years to settle an estate. Instead Cash4Probate can get you paid quickly.</p>
 						<a href="#main" class="button scrolly">Alright let's go</a>
 					</div>
 				</section>
@@ -310,4 +310,5 @@
 			<script src="assets/js/main.js"></script>
 
 	</body>
+
 </html>
