--- a/index.html
+++ b/index.html
@@ -4,29 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Get your inheritance cash in as little as 24 hours with Cash4Probate. No credit checks, no repayment, no risk.">
-    <meta name="keywords" content="inheritance advance, probate funding, cash for probate">
+    <meta name="keywords" content="inheritance advance, probate funding, cash for probate, inheritance cash">
+    <meta name="author" content="Cash4Probate">
     <title>Cash4Probate - Get Your Inheritance in 24 Hours</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
+        * {
+            box-sizing: border-box;
             margin: 0;
             padding: 0;
+        }
+        body {
+            font-family: Arial, sans-serif;
             line-height: 1.6;
             color: #333;
+            background: #fff;
         }
         header {
             background: #004aad;
             color: white;
             text-align: center;
-            padding: 50px 20px;
+            padding: 60px 20px;
         }
         header h1 {
             font-size: 2.5em;
-            margin: 0;
+            margin-bottom: 10px;
         }
         header p {
             font-size: 1.2em;
-            margin: 10px 0;
+            margin-bottom: 20px;
         }
         .cta-button {
             display: inline-block;
@@ -36,6 +41,7 @@
             text-decoration: none;
             border-radius: 5px;
             font-size: 1.1em;
+            transition: background 0.3s;
         }
         .cta-button:hover {
             background: #e55a00;
@@ -43,50 +49,83 @@
         .disclaimer {
             font-size: 0.9em;
             color: #ccc;
-        }
-        section {
-            padding: 40px 20px;
-            max-width: 800px;
-            margin: 0 auto;
+            margin-top: 10px;
         }
         .form-section {
             background: #f9f9f9;
-            padding: 30px;
-            border-radius: 10px;
-        }
-        .form-section h2 {
+            padding: 40px 20px;
             text-align: center;
         }
+        .form-section h2 {
+            font-size: 2em;
+            margin-bottom: 20px;
+        }
         form {
+            max-width: 600px;
+            margin: 0 auto;
             display: flex;
             flex-direction: column;
             gap: 15px;
         }
         input, select, button {
-            padding: 10px;
+            padding: 12px;
             font-size: 1em;
             border: 1px solid #ccc;
             border-radius: 5px;
+            width: 100%;
         }
         button {
             background: #004aad;
             color: white;
             border: none;
             cursor: pointer;
+            transition: background 0.3s;
         }
         button:hover {
             background: #003a8c;
         }
+        label {
+            font-size: 0.9em;
+            text-align: left;
+        }
         .testimonials {
-            background: #fff;
+            padding: 40px 20px;
             text-align: center;
+            background: #fff;
         }
         .testimonials h2 {
+            font-size: 2em;
             margin-bottom: 20px;
         }
         .testimonial {
             margin: 20px 0;
-            font-style: italic;
+            padding: 20px;
+            background: #f9f9f9;
+            border-radius: 5px;
+            max-width: 600px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+        .how-it-works {
+            padding: 40px 20px;
+            background: #f0f4f8;
+            text-align: center;
+        }
+        .how-it-works h2 {
+            font-size: 2em;
+            margin-bottom: 20px;
+        }
+        .steps {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 20px;
+            justify-content: center;
+        }
+        .step {
+            flex: 1 1 300px;
+            padding: 20px;
+            background: #fff;
+            border-radius: 5px;
         }
         footer {
             background: #333;
@@ -99,6 +138,20 @@
             color: #ff6200;
             text-decoration: none;
         }
+        footer a:hover {
+            text-decoration: underline;
+        }
+        @media (max-width: 600px) {
+            header h1 {
+                font-size: 1.8em;
+            }
+            header p {
+                font-size: 1em;
+            }
+            .form-section, .testimonials, .how-it-works {
+                padding: 20px;
+            }
+        }
     </style>
 </head>
 <body>
@@ -106,32 +159,53 @@
         <h1>Get Your Inheritance Cash in 24 Hours!</h1>
         <p>Why wait years for probate to clear? Access your inheritance now with no credit checks or repayment.</p>
         <a href="#apply" class="cta-button">Apply Now – It’s Fast and Free!</a>
-        <p class="disclaimer">*Not available in all states.</p>
+        <p class="disclaimer">*Not available for residents of Maryland or heirs to Maryland/Virginia estates.</p>
     </header>
 
     <section class="form-section" id="apply">
         <h2>5-Minute Application – No Risk, No Repayment</h2>
-        <form action="/submit" method="POST">
+        <p>Fill out our secure form to get your inheritance cash in as little as 24 hours. No credit check, no hidden fees.</p>
+        <form action="https://formspree.io/f/YOUR_FORMSPREE_ID" method="POST">
             <input type="text" name="name" placeholder="Full Name" required>
             <input type="email" name="email" placeholder="Email Address" required>
             <input type="tel" name="phone" placeholder="Phone Number" required>
-            <input type="number" name="inheritance" placeholder="Estimated Inheritance Amount ($)" required>
+            <input type="number" name="inheritance" placeholder="Estimated Inheritance Amount ($)" min="12000" required>
             <select name="state" required>
                 <option value="" disabled selected>State of Probate Case</option>
                 <option value="CA">California</option>
                 <option value="FL">Florida</option>
+                <option value="NY">New York</option>
+                <option value="TX">Texas</option>
                 <!-- Add more states as needed -->
             </select>
             <label>
                 <input type="checkbox" name="consent" required>
-                I agree to be contacted by Cash4Probate via phone, email, or text and accept the <a href="/privacy">Privacy Policy</a>.
+                I agree to be contacted by Cash4Probate via phone, email, or text and accept the <a href="/privacy.html">Privacy Policy</a>. Opt out anytime by emailing <a href="mailto:info@cash4probate.com">info@cash4probate.com</a>.
             </label>
             <button type="submit">Submit Application</button>
         </form>
     </section>
 
+    <section class="how-it-works">
+        <h2>How It Works</h2>
+        <div class="steps">
+            <div class="step">
+                <h3>1. Apply Online</h3>
+                <p>Complete our quick, secure application in just 5 minutes.</p>
+            </div>
+            <div class="step">
+                <h3>2. Case Review</h3>
+                <p>We research your probate case to confirm your eligibility.</p>
+            </div>
+            <div class="step">
+                <h3>3. Get Funds</h3>
+                <p>Receive your cash advance in as little as 24 hours upon approval.</p>
+            </div>
+        </div>
+    </section>
+
     <section class="testimonials">
-        <h2>What Our Clients Say About Cash4Probate</h2>
+        <h2>What Our Clients Say</h2>
         <div class="testimonial">
             <p>"Cash4Probate made the process so easy! Their team was professional, and I got my funds the same day I applied. Highly recommend!"</p>
             <p><strong>Paulette, Tampa, FL</strong></p>
@@ -148,7 +222,7 @@
 
     <footer>
         <p>© 2025 Cash4Probate. All rights reserved.</p>
-        <p><a href="/privacy">Privacy Policy</a> | <a href="/terms">Terms of Use</a> | <a href="mailto:info@cash4probate.com">Contact Us</a></p>
+        <p><a href="/privacy.html">Privacy Policy</a> | <a href="/terms.html">Terms of Use</a> | <a href="mailto:info@cash4probate.com">Contact Us</a></p>
         <p>By providing your contact information, you consent to Cash4Probate contacting you via phone, email, or text. Opt out anytime by emailing <a href="mailto:info@cash4probate.com">info@cash4probate.com</a>.</p>
     </footer>
 </body>
