--- a/index.html
+++ b/index.html
@@ -3,154 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Get your inheritance cash in as little as 24 hours with Cash4Probate. No credit checks, no repayment, no risk.">
-    <meta name="keywords" content="inheritance advance, probate funding, cash for probate, inheritance cash">
-    <meta name="author" content="Cash4Probate">
+    <meta name="description" content="Get your inheritance cash in 24 hours with Cash4Probate. No credit checks, no repayment, no risk.">
+    <meta name="keywords" content="inheritance advance, probate funding, cash for probate">
     <title>Cash4Probate - Get Your Inheritance in 24 Hours</title>
     <style>
-        * {
-            box-sizing: border-box;
-            margin: 0;
-            padding: 0;
-        }
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            color: #333;
-            background: #fff;
-        }
-        header {
-            background: #004aad;
-            color: white;
-            text-align: center;
-            padding: 60px 20px;
-        }
-        header h1 {
-            font-size: 2.5em;
-            margin-bottom: 10px;
-        }
-        header p {
-            font-size: 1.2em;
-            margin-bottom: 20px;
-        }
-        .cta-button {
-            display: inline-block;
-            padding: 15px 30px;
-            background: #ff6200;
-            color: white;
-            text-decoration: none;
-            border-radius: 5px;
-            font-size: 1.1em;
-            transition: background 0.3s;
-        }
-        .cta-button:hover {
-            background: #e55a00;
-        }
-        .disclaimer {
-            font-size: 0.9em;
-            color: #ccc;
-            margin-top: 10px;
-        }
-        .form-section {
-            background: #f9f9f9;
-            padding: 40px 20px;
-            text-align: center;
-        }
-        .form-section h2 {
-            font-size: 2em;
-            margin-bottom: 20px;
-        }
-        form {
-            max-width: 600px;
-            margin: 0 auto;
-            display: flex;
-            flex-direction: column;
-            gap: 15px;
-        }
-        input, select, button {
-            padding: 12px;
-            font-size: 1em;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            width: 100%;
-        }
-        button {
-            background: #004aad;
-            color: white;
-            border: none;
-            cursor: pointer;
-            transition: background 0.3s;
-        }
-        button:hover {
-            background: #003a8c;
-        }
-        label {
-            font-size: 0.9em;
-            text-align: left;
-        }
-        .testimonials {
-            padding: 40px 20px;
-            text-align: center;
-            background: #fff;
-        }
-        .testimonials h2 {
-            font-size: 2em;
-            margin-bottom: 20px;
-        }
-        .testimonial {
-            margin: 20px 0;
-            padding: 20px;
-            background: #f9f9f9;
-            border-radius: 5px;
-            max-width: 600px;
-            margin-left: auto;
-            margin-right: auto;
-        }
-        .how-it-works {
-            padding: 40px 20px;
-            background: #f0f4f8;
-            text-align: center;
-        }
-        .how-it-works h2 {
-            font-size: 2em;
-            margin-bottom: 20px;
-        }
-        .steps {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 20px;
-            justify-content: center;
-        }
-        .step {
-            flex: 1 1 300px;
-            padding: 20px;
-            background: #fff;
-            border-radius: 5px;
-        }
-        footer {
-            background: #333;
-            color: white;
-            text-align: center;
-            padding: 20px;
-            font-size: 0.9em;
-        }
-        footer a {
-            color: #ff6200;
-            text-decoration: none;
-        }
-        footer a:hover {
-            text-decoration: underline;
-        }
+        body { font-family: Arial, sans-serif; line-height: 1.6; margin: 0; padding: 0; color: #333; }
+        header { background: #004aad; color: white; text-align: center; padding: 60px 20px; }
+        header h1 { font-size: 2.5em; margin-bottom: 10px; }
+        header p { font-size: 1.2em; margin-bottom: 20px; }
+        .cta-button { padding: 15px 30px; background: #ff6200; color: white; text-decoration: none; border-radius: 5px; font-size: 1.1em; transition: background 0.3s; }
+        .cta-button:hover { background: #e55a00; }
+        .disclaimer { font-size: 0.9em; color: #ccc; margin-top: 10px; }
+        section { padding: 40px 20px; max-width: 800px; margin: 0 auto; }
+        #apply h2 { margin-bottom: 20px; }
+        form { display: flex; flex-direction: column; gap: 15px; max-width: 500px; margin: 0 auto; }
+        input, button { padding: 12px; font-size: 1em; border: 1px solid #ccc; border-radius: 5px; }
+        button { background: #004aad; color: white; border: none; cursor: pointer; transition: background 0.3s; }
+        button:hover { background: #003a8c; }
+        .how-it-works ol { padding-left: 20px; }
+        .how-it-works li { margin: 10px 0; }
+        .testimonials h2 { margin-bottom: 20px; }
+        .testimonial { margin: 15px 0; padding: 15px; background: #f9f9f9; border-radius: 5px; }
         @media (max-width: 600px) {
-            header h1 {
-                font-size: 1.8em;
-            }
-            header p {
-                font-size: 1em;
-            }
-            .form-section, .testimonials, .how-it-works {
-                padding: 20px;
-            }
+            header h1 { font-size: 1.8em; }
+            header p { font-size: 1em; }
+            section { padding: 20px; }
         }
     </style>
 </head>
@@ -162,7 +39,7 @@
         <p class="disclaimer">*Not available for residents of Maryland or heirs to Maryland/Virginia estates.</p>
     </header>
 
-    <section class="form-section" id="apply">
+    <section id="apply">
         <h2>5-Minute Application – No Risk, No Repayment</h2>
         <p>Fill out our secure form to get your inheritance cash in as little as 24 hours. No credit check, no hidden fees.</p>
         <form action="https://formspree.io/f/YOUR_FORMSPREE_ID" method="POST">
@@ -176,7 +53,6 @@
                 <option value="FL">Florida</option>
                 <option value="NY">New York</option>
                 <option value="TX">Texas</option>
-                <!-- Add more states as needed -->
             </select>
             <label>
                 <input type="checkbox" name="consent" required>
@@ -188,20 +64,11 @@
 
     <section class="how-it-works">
         <h2>How It Works</h2>
-        <div class="steps">
-            <div class="step">
-                <h3>1. Apply Online</h3>
-                <p>Complete our quick, secure application in just 5 minutes.</p>
-            </div>
-            <div class="step">
-                <h3>2. Case Review</h3>
-                <p>We research your probate case to confirm your eligibility.</p>
-            </div>
-            <div class="step">
-                <h3>3. Get Funds</h3>
-                <p>Receive your cash advance in as little as 24 hours upon approval.</p>
-            </div>
-        </div>
+        <ol>
+            <li><strong>1. Apply Online</strong> - Complete our quick, secure application in just 5 minutes.</li>
+            <li><strong>2. Case Review</strong> - We research your probate case to confirm your eligibility.</li>
+            <li><strong>3. Get Funds</strong> - Receive your cash advance in as little as 24 hours upon approval.</li>
+        </ol>
     </section>
 
     <section class="testimonials">
@@ -219,11 +86,5 @@
             <p><strong>Vince, Atlanta, GA</strong></p>
         </div>
     </section>
-
-    <footer>
-        <p>© 2025 Cash4Probate. All rights reserved.</p>
-        <p><a href="/privacy.html">Privacy Policy</a> | <a href="/terms.html">Terms of Use</a> | <a href="mailto:info@cash4probate.com">Contact Us</a></p>
-        <p>By providing your contact information, you consent to Cash4Probate contacting you via phone, email, or text. Opt out anytime by emailing <a href="mailto:info@cash4probate.com">info@cash4probate.com</a>.</p>
-    </footer>
 </body>
 </html>
