--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <h1>Get Your Inheritance Cash in 24 Hours!</h1>
         <p>Why wait years for probate to clear? Access your inheritance now with no credit checks or repayment.</p>
         <a href="#apply" class="cta-button">Apply Now – It’s Fast and Free!</a>
-        <p class="disclaimer">*Not available for residents of Maryland or heirs to Maryland/Virginia estates.</p>
+        <p class="disclaimer">*Not available for residents of all states.</p>
     </header>
 
     <section id="apply">
@@ -58,16 +58,13 @@
             </label>
             <label>
                 Inheritance amount:
-                <input type="number" name="inheritance" placeholder="Estimated Inheritance Amount ($)" min="12000" required>
+                <input type="number" name="inheritance" placeholder="Estimated Inheritance Amount ($)" min="10000" required>
             </label>
             <label>
                 State of probate case:
                 <select name="state" required>
                     <option value="" disabled selected>Select State</option>
                     <option value="CA">California</option>
-                    <option value="FL">Florida</option>
-                    <option value="NY">New York</option>
-                    <option value="TX">Texas</option>
                 </select>
             </label>
             <label>
@@ -104,3 +101,4 @@
     </section>
 </body>
 </html>
+
