--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
     <section class="how-it-works">
         <h2>How It Works</h2>
         <ol>
-            <li><strong>1. Apply Online</strong> - Complete our quick, secure application in just 5 minutes.</li>
-            <li><strong>2. Case Review</strong> - We research your probate case to confirm your eligibility.</li>
-            <li><strong>3. Get Funds</strong> - Receive your cash advance in as little as 24 hours upon approval.</li>
+            <li><strong>Apply Online</strong> - Complete our quick, secure application in just 5 minutes.</li>
+            <li><strong>Case Review</strong> - We research your probate case to confirm your eligibility.</li>
+            <li><strong>Get Funds</strong> - Receive your cash advance in as little as 24 hours upon approval.</li>
         </ol>
     </section>
 
@@ -101,4 +101,5 @@
     </section>
 </body>
 </html>
+
 
