--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Get your inheritance cash in 24 hours with Cash4Probate. No credit checks, no repayment, no risk.">
-    <meta name="keywords" content="inheritance advance, probate funding, cash for probate">
+    <meta name="keywords" content="inheritance advance, probate funding, cash for probate, inherited property, heir, estate">
     <title>Cash4Probate - Get Your Inheritance in 24 Hours</title>
     <style>
         body { font-family: Arial, sans-serif; line-height: 1.6; margin: 0; padding: 0; color: #333; }
@@ -37,7 +37,7 @@
         <h1>Get Your Inheritance Cash in 24 Hours!</h1>
         <p>Why wait years for probate to clear? Access your inheritance now with no credit checks or repayment.</p>
         <a href="#apply" class="cta-button">Apply Now – It’s Fast and Free!</a>
-        <p class="disclaimer">*Not available for residents of all states.</p>
+        <p class="disclaimer">*Not available in all states.</p>
     </header>
 
     <section id="apply">
@@ -69,7 +69,7 @@
             </label>
             <label>
                 <input type="checkbox" name="consent" required>
-                I agree to be contacted by Cash4Probate via phone, email, or text and accept the <a href="/privacy.html">Privacy Policy</a>. Opt out anytime by emailing <a href="mailto:info@cash4probate.com">info@cash4probate.com</a>.
+                I agree to be contacted by Cash4Probate via phone, email, or text and accept the <a href="/privacy.html">Privacy Policy</a>. Opt out anytime by emailing <a href="mailto:VistaGroupMGMT@duck.com">VistaGroupMGMT@duck.com</a>.
             </label>
             <button type="submit">Send</button>
         </form>
@@ -101,5 +101,6 @@
     </section>
 </body>
 </html>
+
 
 
